--- a/about.css
+++ b/about.css
@@ -74,6 +74,7 @@ footer {
   bottom: 0;
   width: 100%;
   padding: 10px;
+  flex-wrap: wrap; 
 }
 footer a, footer p{
   color: white;
@@ -94,4 +95,5 @@ footer a:hover{
       display: block;
     }
 }
+
 
