--- a/ref.css
+++ b/ref.css
@@ -88,6 +88,7 @@ footer {
     text-align: center;
     color: white;
     margin-top: 40px;
+    flex-wrap: wrap;
 }
 footer a, p{
   color: white;
@@ -134,3 +135,4 @@ footer a:hover{
   }
 
 }
+
